--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
+# Default configuration (safe to commit)
 MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PASSWORD=
 MYSQL_DATABASE=beyou_db
+NODE_ENV=development
+
+# Default ports
+PORT=3000
+
+# Public URLs
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
