--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
+# Copy this file to .env.local and fill in your values
+# Database credentials
 MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PASSWORD=your_password_here
-MYSQL_DATABASE=beyou_db
+MYSQL_USER=your_db_user
+MYSQL_PASSWORD=your_db_password
+MYSQL_DATABASE=your_db_name
+
+# JWT Secret (generate a secure random string)
+JWT_SECRET=your_secure_jwt_secret_here
+
+# File upload settings
+UPLOAD_DIR=/uploads
+MAX_FILE_SIZE=5242880
