--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.2",
     "genkit": "^1.0.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
