--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,7 @@
 # Database credentials (sensitive)
-# Replace these with your actual MySQL credentials
 MYSQL_HOST=127.0.0.1
-MYSQL_USER=your_mysql_username
-MYSQL_PASSWORD=your_mysql_password
+MYSQL_USER=jebran
+MYSQL_PASSWORD=Arhaan@123
 MYSQL_DATABASE=beyou_db
 
 # JWT Secret (generate a secure random string)
