--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "migrate": "ts-node src/db/migrate.ts",
     "migrate:server": "node src/db/migrate.js",
     "admin:create": "tsx scripts/create-admin.ts",
-    "admin:reset": "tsx scripts/reset-admin.ts",
+    "admin:reset": "tsx scripts/reset-admin-clean.ts",
     "admin:check": "tsx scripts/check-admin.ts",
     "admin:reset-server": "node scripts/reset-admin-server.js",
     "test:login": "node scripts/test-login.js"
