--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.66.0",
+    "@types/busboy": "^1.5.4",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
+    "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -54,8 +56,10 @@
     "genkit": "^1.0.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
+    "multiparty": "^4.2.3",
     "mysql2": "^3.14.3",
     "next": "^15.5.0",
+    "next-connect": "^1.0.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -72,6 +76,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/multiparty": "^4.2.1",
     "@types/node": "^20.19.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
