--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,8 @@ jobs:
 
             # Stash any local changes
             git stash
-            git pull origin main
+            git fetch origin main
+            git pull
             mv .env.local .env.local.backup
 
             # Ensure production uploads directory exists and has proper permissions
