--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,10 +29,10 @@ jobs:
             git config --global --add safe.directory /var/www/beyou
             git remote set-url origin https://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@github.com/sheikhjebran/beyou.git
 
-            # Stash any local changes
-            git stash
+            # Discard any local changes except uploads directory
             git fetch origin main
-            git pull
+            git reset --hard origin/main
+            git clean -fd -e uploads/
             mv .env.local .env.local.backup
 
             # Ensure production uploads directory exists and has proper permissions
@@ -50,9 +50,43 @@ jobs:
             chown -R www-data:www-data /var/www/beyou/uploads
             chmod -R 755 /var/www/beyou/uploads
 
-            npm install
-            npm ci
+            # Configure Nginx for large file uploads
+            if [ ! -f "/etc/nginx/sites-available/beyou-large-uploads" ]; then
+              cat > /etc/nginx/sites-available/beyou-large-uploads << 'NGINXEOF'
+            server {
+                listen 80;
+                server_name beyoushop.in www.beyoushop.in;
+                
+                client_max_body_size 1G;
+                client_body_timeout 120s;
+                client_header_timeout 120s;
+                
+                location / {
+                    proxy_pass http://localhost:3000;
+                    proxy_http_version 1.1;
+                    proxy_set_header Upgrade $http_upgrade;
+                    proxy_set_header Connection 'upgrade';
+                    proxy_set_header Host $host;
+                    proxy_set_header X-Real-IP $remote_addr;
+                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto $scheme;
+                    proxy_cache_bypass $http_upgrade;
+                    
+                    proxy_connect_timeout 120s;
+                    proxy_send_timeout 120s;
+                    proxy_read_timeout 120s;
+                }
+            }
+            NGINXEOF
+              ln -sf /etc/nginx/sites-available/beyou-large-uploads /etc/nginx/sites-enabled/
+              rm -f /etc/nginx/sites-enabled/default
+              nginx -t && systemctl reload nginx
+            fi
+
+            npm ci --production
             npm run migrate:server
             npm run build
 
-            pm2 restart beyou || pm2 start beyou
+            pm2 restart beyou
+            sleep 5
+            pm2 status beyou
