--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,10 +47,10 @@ jobs:
             fi
 
             # Set proper permissions for uploads directory
-            chown -R www-data:www-data /var/www/beyou/uploads
+            chown -R deploy:deploy /var/www/beyou/uploads
             chmod -R 755 /var/www/beyou/uploads
 
-            npm ci --production
+            npm ci --omit=dev
             npm run migrate:server
             npm run build
 
