--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,12 @@ jobs:
             chown -R deploy:deploy /var/www/beyou/uploads
             chmod -R 755 /var/www/beyou/uploads
 
-            npm ci --omit=dev
+            # Fix package-lock.json sync issues by regenerating if needed
+            if ! npm ci --omit=dev 2>/dev/null; then
+              echo "npm ci failed, regenerating package-lock.json..."
+              rm -f package-lock.json
+              npm install --omit=dev
+            fi
             npm run migrate:server
             npm run build
 
